--- a/package.json
+++ b/package.json
@@ -1,37 +1,25 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "fs_todo",
+  "version": "1.0.0",
+  "description": "our very first MERN app",
+  "main": "app.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "nodemon app.js"
   },
+  "author": "Full Stack Niraj",
+  "license": "ISC",
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/drawer": "^5.12.5",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "axios": "^0.21.1",
-    "expo": "~41.0.1",
-    "expo-barcode-scanner": "~10.1.2",
-    "expo-camera": "~11.0.2",
-    "expo-image-picker": "~10.1.4",
-    "expo-status-bar": "~1.0.4",
-    "formik": "^2.2.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-scan-barcode": "^3.1.7",
-    "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12",
-    "yup": "^0.32.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0"
-  },
-  "private": true
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.10.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.4",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "sharp": "^0.28.1"
+  }
 }
